<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyMapViewActivity!</string>
    <string name="app_name">MyMapView</string>
    <string name="discard_label">CANCEL</string>
    <string name="save_label">DONE</string>
    <string name="remove_label">Remove</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_new">NEW</string>
    <string name="btn_done">DONE</string>
    <string name="loading">Loading</string>
    <string name="add_new_marker">Add Your Position</string>
    <string name="clear_all_areas">Clear all areas</string>
    <string name="area_default_name">Area Name</string>
    <string name="area_default_description">Area Description</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_area_details">AreaDetailsActivity</string>

    <string name="area_prompt">Choose something</string>
    <string-array name="area_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    
</resources>