<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_actionbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
 >

    <LinearLayout
        android:id="@+id/main_actionbar"
        android:layout_width="fill_parent"
    	android:layout_height="@dimen/actionbar_compat_height"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="12dip"
        android:orientation="horizontal"
        android:showDividers="middle"
    	android:background="@color/bar_background"
        android:visibility="visible" >

        <TextView
            android:id="@+id/actionbar_title"
            style="@style/TextAppearance.Widget.ActionBar.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/new_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:filterTouchesWhenObscured="true"
            android:maxLines="1"
            android:text="@string/btn_new"
            android:textAppearance="?android:attr/actionMenuTextAppearance"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/edit_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:filterTouchesWhenObscured="true"
            android:maxLines="1"
            android:text="@string/btn_edit"
            android:textAppearance="?android:attr/actionMenuTextAppearance"
            android:textColor="@color/text"
            android:visibility="gone" />

        <Button
            android:id="@+id/done_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:filterTouchesWhenObscured="true"
            android:maxLines="1"
            android:text="@string/btn_done"
            android:textAppearance="?android:attr/actionMenuTextAppearance"
            android:textColor="@color/text"
            android:visibility="gone" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/edit_area_actionbar"
        android:layout_width="fill_parent"
    	android:layout_height="@dimen/actionbar_compat_height"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="12dip"
        android:orientation="horizontal"
        android:showDividers="middle"
    	android:background="@color/bar_background"
        android:visibility="gone" >

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawablePadding="0dp"
            android:maxLines="1"
            android:text="@string/discard_label"
            android:textAppearance="?android:attr/actionMenuTextAppearance"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/ok_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:maxLines="1"
            android:text="@string/save_label"
            android:textAppearance="?android:attr/actionMenuTextAppearance"
            android:textColor="@color/text" />
    </LinearLayout>

</RelativeLayout>