<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_edit_overlay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/edit_overlay_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="12dip"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:visibility="visible" >

        <EditText
            android:id="@+id/area_details_name_edit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="0dp"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/area_default_name"
            android:textAppearance="?android:attr/actionMenuTextAppearance"
            android:textStyle="bold"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/area_details_description_edit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="0dp"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/area_default_description"
            android:textAppearance="?android:attr/actionMenuTextAppearance"
            android:textStyle="bold"
            android:textColor="@color/text" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:prompt="@string/area_prompt"
        android:entries="@array/area_array" />

    <EditText
        android:id="@+id/editText1_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="8"
        android:padding="12dp"
        android:text="Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing..."
        android:textColor="@color/text" />

</LinearLayout>